# chatsystem

server/: CMakeLists.txt
server/common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
server/file/: CMakeLists.txt
server/file/source/: file_server.cc  file_server.hpp
server/file/test/: file_client.cc
server/friend/: CMakeLists.txt
server/friend/source/: friend_server.cc  friend_server.hpp
server/friend/test/: chat_session-odb.hxx  chat_session-odb.ixx  chat_session_member-odb.hxx  friend_apply-odb.cxx  friend_apply-odb.hxx  friend_apply.sql  friend_client.cc  relation-odb.hxx  relation.sql
server/friend/test/mysql_test/: main  main.cc  makefile
server/message/: CMakeLists.txt
server/message/pb/: base.pb.cc  user.pb.cc
server/message/source/: message_server.cc  message_server.hpp
server/message/test/: message_client.cc
server/message/test/es_test/: main  main.cc  makefile
server/message/test/mysql_test/: main  main.cc  makefile
server/odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message-odb.cxx  message-odb.hxx  message-odb.ixx  message.hxx  message.sql  relation.hxx  user.hxx
server/proto/: base.proto  file.pb.cc  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
server/speech/: CMakeLists.txt
server/speech/source/: speech_server.cc  speech_server.hpp
server/speech/test/: speech_client.cc
server/third/include/aip-cpp-sdk/base/: utils.h
server/transmite/: CMakeLists.txt
server/transmite/source/: transmite_server.cc  transmite_server.hpp
server/transmite/test/: transmite_client.cc
server/transmite/test/mysql_test/: main.cc
server/user/: CMakeLists.txt
server/user/source/: user_server.cc  user_server.hpp
server/user/test/: user_client.cc
server/user/test/es_test/: main.cc  makefile
server/user/test/mysql_test/: main.cc  makefile  user.sql
server/user/test/redis_test/: main.cc  makefile
